<resources>
    <string name="app_name">医学微视</string>
    <string name="hide_search">搜索症状</string>
    <string name="login">登录</string>
    <string name="open_vip">开通会员</string>
    <string name="history">播放记录</string>
    <string name="app_desc">《医学微视》是一款健康科普视频产品，内容涵盖34学科、疾病涉猎800多种，300家公立医院、其中200余家知名三甲医院、800多位医学院士、学科带头人、主任医师参录制与制作。《医学微视》由国家级权威机构监制：国家卫健委、中国医学科学院健康科普研究中心。</string>
    <string name="app_brief">医学微视简介</string>
    <string name="classification">学科分类</string>
    <string name="free_trial">免费试看</string>
    <string name="free_str">免费</string>
    <string name="watch_now">立即观看</string>
    <string name="purchase">立即购买</string>
    <string name="lockscreen_transport_play_description">播放</string>
    <string name="lockscreen_transport_pause_description">停止</string>




    <string name="keycode_space">62</string> <!-- 空格 -->
    <string name="keycode_center">66</string> <!-- 回车 -->
    <string name="keycode_back">4</string> <!-- 返回 -->
    <string name="keycode_left">21</string> <!-- 左边 -->
    <string name="keycode_right">22</string> <!-- 右边 -->
    <string name="keycode_del">67</string> <!-- 删除 -->
</resources>
