<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".ui.activity.VideoDetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp">


            <Button
                android:id="@+id/btn_search"
                android:layout_width="246dp"
                android:layout_height="28dp"
                android:background="@drawable/tv_bug_search_bg"
                android:drawableStart="@drawable/system_serchb"
                android:nextFocusRight="@+id/btn_free_trial"
                android:paddingLeft="10dp"
                android:text="@string/hide_search"
                android:textColor="@color/font_gray_white"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="38dp"
                android:text="@string/app_name"
                android:textColor="@color/tv_f1f1f1"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="19dp"
                android:layout_toLeftOf="@+id/tv_app_name"
                tools:text="15:42"
                android:format12Hour="hh:mm"
                android:format24Hour="HH:mm"
                android:textStyle="bold"
                android:textColor="@color/tv_f1f1f1"
                android:textSize="18sp" />


        </RelativeLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="227dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginRight="30dp">

                    <RelativeLayout
                        android:id="@+id/rl_video_img"
                        android:layout_width="469dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_video_cover"
                        android:padding="2dp">

                        <ImageView
                            android:id="@+id/iv_video_cover"
                            android:layout_width="469dp"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bitmap3" />

                        <ImageView
                            android:id="@+id/iv_video_is_purchase"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/vip_icon"
                            android:visibility="gone"
                            tools:visibility="visible"/>
                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/line_video_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/rl_video_img"
                        android:orientation="vertical"
                        android:paddingLeft="15dp">

                        <TextView
                            android:id="@+id/tv_video_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="#fff0f0f0"
                            android:textSize="16sp"
                            tools:text="面肌痉挛的治疗方法有哪些？" />

                        <TextView
                            android:id="@+id/tv_video_teacher"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text=""
                            android:visibility="gone"
                            android:textColor="#fff0f0f0"
                            android:textSize="16sp" />


                        <TextView
                            android:id="@+id/tv_video_teacher_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="简介：中国医学科学院阜外医院 原院长 博士生导师"
                            android:maxLines="3"
                            android:ellipsize="end"
                            android:textColor="#F1F1F1"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:visibility="visible"
                            android:layout_weight="1" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="36dp">

                            <Button
                                android:id="@+id/btn_free_trial"
                                android:layout_width="98dp"
                                android:layout_height="28dp"
                                android:background="@drawable/btn_select_bg"
                                android:focusable="auto"
                                android:nextFocusLeft="@id/btn_search"
                                android:nextFocusRight="@+id/btn_purchase"
                                android:text="@string/watch_now"
                                android:textColor="@color/tv_f1f1f1"
                                android:textSize="14sp" >
                                <requestFocus></requestFocus>
                            </Button>

                            <Button
                                android:id="@+id/btn_purchase"
                                android:layout_width="98dp"
                                android:layout_height="28dp"
                                android:layout_marginLeft="28dp"
                                android:background="@drawable/btn_select_bg"
                                android:focusable="auto"
                                android:nextFocusDown="@+id/gridviewtv"
                                android:text="@string/purchase"
                                android:textColor="@color/tv_f1f1f1"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>

                </RelativeLayout>

                <com.waoqi.tvwidget.view.SmoothHorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    android:overScrollMode="always">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/btn_search"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="30dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false">


                        <com.waoqi.tvwidget.view.GridViewTV
                            android:id="@+id/gridviewtv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipChildren="false"
                            android:columnWidth="189dp"
                            android:gravity="center_vertical"
                            android:horizontalSpacing="5dp"
                            android:nextFocusUp="@+id/btn_free_trial"
                            android:numColumns="auto_fit"
                            android:scrollbars="none"
                            android:verticalSpacing="5dp" />
                    </FrameLayout>
                </com.waoqi.tvwidget.view.SmoothHorizontalScrollView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <com.waoqi.tvwidget.view.MainUpView
        android:id="@+id/mainUpView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</FrameLayout>